...
            "state" : "translated",
            "value" : "清除搜尋"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "关闭"
          }
...
            "state" : "translated",
            "value" : "連接網際網路以查看你加上星號的摘要。"
          }
        }
      }
    },
    "Connect your AI agents" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "连接你的 AI 智能体"
          }
...
            "state" : "translated",
            "value" : "出發機場（IATA）"
          }
        }
      }
    },
    "From Safari to a summary" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "从 Safari 到摘要"
          }
...
    "Journey's end" : {

    },
    "JR East" : {
      "shouldTranslate" : false
    },
    "Just ask Siri" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "问问 Siri 就行"
          }
...
            "state" : "translated",
            "value" : "MCP 伺服器"
          }
        }
      }
    },
    "Meet your Trip Diary" : {

    },
    "Membership required" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
...
    "Replace Image…" : {

    },
    "Replacing image…" : {

    },
    "Research papers, in LaTeX" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "用 LaTeX 撰写研究论文"
          }
...
            "state" : "translated",
            "value" : "分享連結"
          }
        }
      }
    },
    "Share on your terms" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "按你的方式分享"
          }
...
            "state" : "translated",
            "value" : "歡迎使用 Chippy"
          }
        }
      }
    },
    "Welcome Tour" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "欢迎导览"
          }
...
            "state" : "translated",
            "value" : "新功能"
          }
        }
      }
    },
    "What’s New" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新功能"
          }
...
            "state" : "translated",
            "value" : "你在資料庫中打開過的摘要記錄"
          }
        }
      }
    },
    "Your next summary, with Siri" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "用 Siri 创建下一个摘要"
          }
...
